--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,7 +59,7 @@ jobs:
     - name: zip
       run: |
         cd ${{github.workspace}}/artifacts
-        zip -r ${{github.workspace}}/analyzer.zip .
+        zip -r ${{github.workspace}}/SaleaeSDIOAnalyzer-${{github.ref_name}}.zip .
     - uses: actions/upload-artifact@v2
       with:
         name: all-platforms
@@ -68,4 +68,4 @@ jobs:
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
-          files: ${{github.workspace}}/analyzer.zip
+          files: ${{github.workspace}}/SaleaeSDIOAnalyzer-${{github.ref_name}}.zip
