--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,8 @@ on:
       - '*'
   pull_request:
     branches: [master]
-
+  workflow_dispatch:
+  
 jobs:
   windows:
     runs-on: windows-latest
